layout fix: left column cutoff

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -37,7 +37,7 @@
   }
 
   @include mq(lg) {
-    width: calc((100% - #{$nav-width + $content-width }) / 2 );
+    width: calc((100% - #{$nav-width + $content-width }) / 1.8 );
     min-width: $nav-width;
   }
 }
@@ -47,7 +47,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
+    width: 110%;
     height: 100%;
     min-height: 600px;
     -webkit-overflow-scrolling: touch;
@@ -71,7 +71,8 @@
 
   @include mq(lg) {
     padding-left: $gutter-spacing;
-    margin-left: calc((100% - #{$nav-width + $content-width}) / 2 + #{$nav-width*0.5});
+    margin-right: -20%;
+    margin-left: calc((90% - #{$nav-width + $content-width}) / 1.8 + #{$nav-width*0.5});
   }
 }
 
